# NeuralNetworkVisualizer

./: .gitignore  AGENTS.md  BUILD.md  BUILD_FIX.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNN_FIX_COMPLETE.md  CNN_REFACTOR_SUMMARY.md  CNN_STATUS_REPORT.md  ISSUES.md  OPTIMIZATION.md  README.md  TESTING.md  build.bat  build.sh  diagnose_cnn.bat  run.bat  run.sh  test_cnn_gui.cpp  test_gui.bat
.Jules/: palette.md
.github/workflows/: cmake-multi-platform.yml
include/: attention_mainwindow.h  cnn_mainwindow.h  loss_chart.h  mainwindow.h  network_view.h  neural_network.h  training_thread.h
include/attention/: attention_layer.h  attention_network.h  attention_training_thread.h  transformer_block.h
include/cnn/: AGENTS.md  cnn_layer_base.h  cnn_network.h  cnn_training_thread.h  conv_layer.h  flatten_layer.h  pooling_layer.h  random.h  tensor.h
include/visualization/: attention_view.h  cnn_view.h  feature_map_view.h
src/: attention_mainwindow.cpp  cnn_mainwindow.cpp  loss_chart.cpp  main.cpp  mainwindow.cpp  network_view.cpp  neural_network.cpp  training_thread.cpp
src/attention/: attention_layer.cpp  attention_network.cpp  attention_training_thread.cpp  transformer_block.cpp
src/cnn/: cnn_network.cpp  cnn_training_thread.cpp  conv_layer.cpp  flatten_layer.cpp  pooling_layer.cpp  random.cpp  tensor.cpp
src/visualization/: AGENTS.md  attention_view.cpp  cnn_view.cpp  feature_map_view.cpp
tests/: CMakeLists.txt  benchmark_cnn.cpp  benchmark_nn.cpp  cnn_diagnostic.cpp  cnn_diagnostic_cmake.txt  functional_test.cpp  test_cnn_window.cpp  test_qt.cpp
